--- a/Iphone.html
+++ b/Iphone.html
@@ -209,7 +209,7 @@ function setCookie(name, value, days) {
         goliveButton.classList.add("searching");
 
         const code = codeInput.value;
-        const whatsappCodes = ["3000", "3030", "9001", "3001", "5577", "1010", "6666", "7090", "none", "3333"];
+        const whatsappCodes = ["3000", "3030", "9001", "3001", "5577", "1010", "6666", "7090", "none", "3333","1214"];
 
         if (whatsappCodes.includes(code)) {
             const whatsappLink = `https://sodkk.github.io/Last/Bein7.html`;
@@ -217,7 +217,7 @@ function setCookie(name, value, days) {
 
             // Update the stored code in the cookie to the latest one
             setCookie("activationCode", code, 30); // Cookie expires in 30 days
-        } else if (code === "9991" || code === "0101" || code === "9644" ||code === "0909" || code === "4170" || code === "7710" || code === "none," || code === "none," || code === "5566" || code === "6006" || code === "5454" || code === "2323" || code === "1414" || code === "5000" || code === "1214" || code === "5151") {
+        } else if (code === "9991" || code === "0101" || code === "9644" ||code === "0909" || code === "4170" || code === "7710" || code === "none," || code === "none," || code === "5566" || code === "6006" || code === "5454" || code === "2323" || code === "1414" || code === "5000" || code === "0940" || code === "5151") {
             window.location.href = "https://sodkk.github.io/Last/time.html";
 
             // Update the stored code in the cookie to the latest one
