--- a/updatemach.html
+++ b/updatemach.html
@@ -546,6 +546,9 @@ const teams = [
   { name: 'Arouca', logo: 'https://cdn.resfu.com/img_data/equipos/4641.png?size=120x&lossy=1&ext=jpeg' },
   { name: 'Porto', logo: 'https://cdn.resfu.com/img_data/equipos/1095.png?size=120x&lossy=1&ext=jpeg' },
   { name: 'Gil Vicente', logo: 'https://cdn.resfu.com/img_data/equipos/1223.png?size=120x&lossy=1&ext=jpeg' },
+{ name: '', logo: 'https://github.com/Sodkk/Last/blob/main/soodag.jpg?raw=true' },
+{ name: 'Gil Vicente', logo: 'https://cdn.resfu.com/img_data/equipos/1223.png?size=120x&lossy=1&ext=jpeg' },
+	
   { name: 'Visele', logo: 'https://cdn.resfu.com/img_data/equipos/7015.png?size=120x&lossy=1&ext=jpeg' },
 
 
